Changelog
=========


1.2.3 (unreleased)
------------------

- Import ReferenceBrowserWidget from archetypes.referencebrowserwidget.
  [jone]


1.2.2 (2012-05-14)
------------------

- Use ftw.colorbox to show images in larger scales.
  [tschanzt]

- Fix Readme and use new test buildout config.
  [jone]


1.2.1 (2012-04-05)
------------------

- Use width 100% instead of auto (IE fix) in image listing.
  [mathias.leimgruber]


1.2 (2012-04-02)
----------------

- Added ftw.tabbedview based overview.
  [mathias.leimgruber]


1.1.7 (2012-03-12)
------------------

- Do not display tags-listing if there is no tag to list.
  [Julian Infanger]


1.1.6 (2012-03-05)
------------------

- Show categories the same way as tags in blog view.
  [Julian Infanger]

- Show plone.belowcontentbody in blog and entry views.
  [Julian Infanger]

- Show categories on blogentry view only if there is at least
  one category defined.
  [mathias.leimgruber]

- Clean up css.
  [mathias.leimgruber]


1.1.5 (2012-02-28)
------------------

- Fixed MANIFEST.in: Include README.rst, no longer exclude .mo files.
  [Thomas Buchberger]


1.1.4 (2012-02-27)
------------------

- Remove "Blog settings" view.
  [jone]

- Add english translations.
  [jone]

- Remove styling of search box for improving compatibility with plone default layout.
  [jone]

- Do not create default category on blog creation.
  [jone]

- Categories portlet: hide when there are no categories.
  [jone]

- Use plone default class for button in blog actionbar.
  [Julian Infanger]

- Removed blog.portlets portlet manager. Blog specific portlets are now
  assigned by portal_type in plone.rightcolumn.
  Provide upgrade step to remove existing portlet assignments on context.
  [Julian Infanger]

- Add Categories translation
  [ttschanz]


1.1.3 (2011-12-05)
------------------

- Restrict references to categories in blog entries to portal_type
  'BlogCategory'. This fixes a huge performance issue with the add and edit