@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <metadata>
-    <version>2</version>
+    <version>1201</version>
     <dependencies>
         <dependency>profile-ftw.tagging:default</dependency>
   </dependencies>
