@@ -18,7 +18,6 @@
   <property name="allow_discussion">True</property>
   <property name="default_view">blog_entry_view</property>
   <property name="view_methods">
-    <element value="base_view" />
     <element value="blog_entry_view" />
   </property>
   <alias from="(Default)" to="(dynamic view)" />
