@@ -1,0 +1,10 @@
+<?xml version="1.0"?>
+<object name="BlogEntry"
+   meta_type="Factory-based Type Information with dynamic views"
+   i18n:domain="ftw.blog" xmlns:i18n="http://xml.zope.org/namespaces/i18n">
+
+  <property name="view_methods">
+    <element value="blog_entry_view" />
+  </property>
+
+</object>
